--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -32,19 +32,9 @@ jobs:
           git commit -m "Actualización de monitor.log"
           
           # Hacer pull para obtener los últimos cambios antes del push
-          git pull --strategy=recursive --strategy-option=theirs origin master
+          git pull --strategy=recursive --strategy-option=theirs origin main
 
           # Hacer push con el token de GitHub
-          git push https://x-access-token:${GIT  run: |
-          curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
-          -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-          -d text="Se ejecutó el workflow de monitorización web: \nResultado: Código de estado - $STATUS_CODE \nHora: $TIMESTAMP"
-      - name: Enviar mensaje a Telegram
-        run: |
-          curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
-          -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-          -d text="Se ejecutó el workflow de monitorización- name: Enviar mensaje a TelegramMP"
- 
-      
-
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git main
+          
 
